--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNDlQeEeshmAb4XdKr3MpFo",
+      "authorship_tag": "ABX9TyPMeoeRIePuCDn3W81wrm6u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -377,7 +378,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction (by the project team)\n",
+        "## Introduction\n",
         "In this preparation notebook, we will set up a suitable variant of Llama2 LLM to be able to do some raw queries. We then will try to integrate it into a langchain-based pipeline and test it by asking the model some simple questions (a \"vanilla\" chatbot, missing yet any customization). This will help us to get ready for our project's next iteration (in another notebok) in which we will take this pipeline one step further by implementing RAG (Retrieval Augmented Generation).\n",
         "\n",
         "*Note*: This notebook is partially based on `Chatbot_LLama_2.ipynb` from Maryiam's tutorials and also heavily borrows from `Run LLama-2 on Google Colab` tutorial by Muhammad Moin ([link](https://github.com/MuhammadMoinFaisal/LargeLanguageModelsProjects/blob/main/Run%20Llama2%20Google%20Colab/Llama_2_updated.ipynb]))."
@@ -392,7 +393,8 @@
         "# Workflow\n",
         "\n",
         "1. Gathering the Dependencies\n",
-        "2. Downloading and loading the model"
+        "2. Downloading and Loading the Model\n",
+        "3. Testing the Model with Raw Prompting"
       ],
       "metadata": {
         "id": "OUL4puK4Rdm6"
@@ -847,7 +849,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Downloading and loading the model"
+        "# Downloading and Loading the Model"
       ],
       "metadata": {
         "id": "kxrBZ5DwWcTV"
@@ -993,6 +995,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Testing the Model with Raw Prompting"
+      ],
+      "metadata": {
+        "id": "oQ-97AhqaykM"
+      }
     }
   ]
 }
