--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPMeoeRIePuCDn3W81wrm6u",
+      "authorship_tag": "ABX9TyMfHakRU6aJLUBJsKZenMb1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -967,6 +967,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The model should be available from now locally on our google drive. Let's try to load it into Colab's T4 GPU and see the stats."
+      ],
+      "metadata": {
+        "id": "zvdRQkcfbruD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# GPU\n",
@@ -995,6 +1004,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# See the number of layers in GPU\n",
+        "lcpp_llm.params.n_gpu_layers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5oa8n3pGbWZN",
+        "outputId": "d7183e1b-1ac2-4e9e-ff53-ea6d6e670540"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Everything seems to be okay and we are lucky that, thanks to quantization, we are able to use this LLM right from our Colab notebook, for free."
+      ],
+      "metadata": {
+        "id": "swFK2Iigb8eE"
+      }
     },
     {
       "cell_type": "markdown",
