--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMfHakRU6aJLUBJsKZenMb1",
+      "authorship_tag": "ABX9TyPnRE5MViVP5fFfIwMGtBtj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -378,7 +378,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction\n",
+        "# Introduction\n",
         "In this preparation notebook, we will set up a suitable variant of Llama2 LLM to be able to do some raw queries. We then will try to integrate it into a langchain-based pipeline and test it by asking the model some simple questions (a \"vanilla\" chatbot, missing yet any customization). This will help us to get ready for our project's next iteration (in another notebok) in which we will take this pipeline one step further by implementing RAG (Retrieval Augmented Generation).\n",
         "\n",
         "*Note*: This notebook is partially based on `Chatbot_LLama_2.ipynb` from Maryiam's tutorials and also heavily borrows from `Run LLama-2 on Google Colab` tutorial by Muhammad Moin ([link](https://github.com/MuhammadMoinFaisal/LargeLanguageModelsProjects/blob/main/Run%20Llama2%20Google%20Colab/Llama_2_updated.ipynb]))."
@@ -1049,6 +1049,81 @@
       "metadata": {
         "id": "oQ-97AhqaykM"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First, let's construct the default prompt template that contains a simple system prompt:"
+      ],
+      "metadata": {
+        "id": "fUgfrAYocVDH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def eval_default_prompt_templ(prompt):\n",
+        "  prompt_template=f'''SYSTEM: You are a helpful, respectful and honest assistant. Always answer as helpfully as possible.\n",
+        "\n",
+        "  USER: %s\n",
+        "\n",
+        "  ASSISTANT:\n",
+        "  '''\n",
+        "\n",
+        "  return prompt_template % prompt"
+      ],
+      "metadata": {
+        "id": "WlKm09uMcl4P"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, without further ado, let's query the model with something and see what it gives us:"
+      ],
+      "metadata": {
+        "id": "RRHqqC3WdNZ5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt='Where Simon Fraser University is located?'"
+      ],
+      "metadata": {
+        "id": "Z6hLRtX8dhP2"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response=lcpp_llm(prompt=eval_default_prompt_templ(prompt), max_tokens=256, temperature=0.5, top_p=0.95,\n",
+        "                  repeat_penalty=1.2, top_k=150,\n",
+        "                  echo=True)\n",
+        "\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RMYpHGFZdfSz",
+        "outputId": "4dcc597c-f650-45a5-aea3-f1e56a8c048b"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'id': 'cmpl-79920ee3-3f4c-4a27-ae4a-f69d87bb141a', 'object': 'text_completion', 'created': 1712726754, 'model': '/root/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-chat-GGML/snapshots/3140827b4dfcb6b562cd87ee3d7f07109b014dd0/llama-2-13b-chat.ggmlv3.q5_1.bin', 'choices': [{'text': \"SYSTEM: You are a helpful, respectful and honest assistant. Always answer as helpfully as possible.\\n\\n  USER: Where Simon Fraser University is located?\\n\\n  ASSISTANT:\\n   Sure thing! Simon Fraser University (SFU) has three campuses in British Columbia, Canada. The main campus is located on Burnaby Mountain, about 20 minutes from downtown Vancouver by car or public transit. The other two campuses are located in Surrey and Vancouver.\\n\\n   Would you like to know more information about SFU's programs, research areas, or student life? I'd be happy to help!\", 'index': 0, 'logprobs': None, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 49, 'completion_tokens': 96, 'total_tokens': 145}}\n"
+          ]
+        }
+      ]
     }
   ]
 }
