--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMH86qI02roue+OHfZhlkNl",
+      "authorship_tag": "ABX9TyNl6s+unKEIkMjF5Xya1I/o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -432,7 +432,7 @@
         "\n",
         "We can see the different variations that Llama-2 GGUF has [here](https://huggingface.co/models?search=llama%202%20gguf).\n",
         "\n",
-        "In this case, we will use the model called [Llama-2-7B-Chat-GGUF](https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGUF).\n"
+        "In this case, we will use the model called [Llama-2-13B-Chat-GGUF](https://huggingface.co/TheBloke/Llama-2-13B-Chat-GGUF).\n"
       ],
       "metadata": {
         "id": "0_OfKCXeTkLu"
@@ -614,6 +614,8 @@
         "#model_name_or_path = \"TheBloke/Llama-2-7B-chat-GGUF\"\n",
         "#model_basename = \"llama-2-7b-chat.Q4_K_M.gguf\"\n",
         "\n",
+        "# 13b model seems to work just slightly slower than 7b, but its scores are better across all categories\n",
+        "# Hence, it is our final choice\n",
         "model_name_or_path = \"TheBloke/Llama-2-13B-chat-GGUF\"\n",
         "model_basename = \"llama-2-13b-chat.Q4_K_M.gguf\""
       ],
@@ -685,7 +687,7 @@
         "    model_path=model_path,\n",
         "    n_threads=2, # CPU cores\n",
         "    n_batch=512, # Should be between 1 and n_ctx, consider the amount of VRAM in your GPU.\n",
-        "    n_gpu_layers=-1 # Change this value based on your model and your GPU VRAM pool.\n",
+        "    n_gpu_layers=-1 # Change this value based on your model and your GPU VRAM pool, -1 tries to move all layers to GPU\n",
         "    )"
       ],
       "metadata": {
