--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOxidNvVfuIpyNB9qt3z04z",
+      "authorship_tag": "ABX9TyOP89cgemGsLhdJa9WQlGj6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,7 +451,7 @@
       "cell_type": "code",
       "source": [
         "# GPU llama-cpp-python\n",
-        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 pip install llama-cpp-python --upgrade --force-reinstall --verbose\n",
+        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 pip install llama-cpp-python --upgrade --verbose\n",
         "!pip install huggingface_hub\n",
         "!pip install llama-cpp-python"
       ],
@@ -460,9 +460,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tLvr3mtwUe1M",
-        "outputId": "15850674-ec07-4577-d450-4b16700cdeb9"
+        "outputId": "d28a0f77-9c8e-4038-96df-1be4bc271fd1"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,35 +472,31 @@
             "Collecting llama-cpp-python\n",
             "  Using cached llama_cpp_python-0.2.61-cp310-cp310-manylinux_2_35_x86_64.whl\n",
             "Collecting typing-extensions>=4.5.0 (from llama-cpp-python)\n",
-            "  Downloading typing_extensions-4.11.0-py3-none-any.whl (34 kB)\n",
+            "  Using cached typing_extensions-4.11.0-py3-none-any.whl (34 kB)\n",
             "Collecting numpy>=1.20.0 (from llama-cpp-python)\n",
-            "  Downloading numpy-1.26.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.2/18.2 MB\u001b[0m \u001b[31m74.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting diskcache>=5.6.1 (from llama-cpp-python)\n",
+            "  Using cached numpy-1.26.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.2 MB)\n",
+            "Collecting diskcache>=5.6.1 (from llama-cpp-python)\n",
             "  Using cached diskcache-5.6.3-py3-none-any.whl (45 kB)\n",
             "Collecting jinja2>=2.11.3 (from llama-cpp-python)\n",
-            "  Downloading Jinja2-3.1.3-py3-none-any.whl (133 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.2/133.2 kB\u001b[0m \u001b[31m17.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting MarkupSafe>=2.0 (from jinja2>=2.11.3->llama-cpp-python)\n",
-            "  Downloading MarkupSafe-2.1.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (25 kB)\n",
+            "  Using cached Jinja2-3.1.3-py3-none-any.whl (133 kB)\n",
+            "Collecting MarkupSafe>=2.0 (from jinja2>=2.11.3->llama-cpp-python)\n",
+            "  Using cached MarkupSafe-2.1.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (25 kB)\n",
             "Installing collected packages: typing-extensions, numpy, MarkupSafe, diskcache, jinja2, llama-cpp-python\n",
             "  Attempting uninstall: typing-extensions\n",
-            "    Found existing installation: typing_extensions 4.10.0\n",
-            "    Uninstalling typing_extensions-4.10.0:\n",
+            "    Found existing installation: typing_extensions 4.11.0\n",
+            "    Uninstalling typing_extensions-4.11.0:\n",
             "      Removing file or directory /usr/local/lib/python3.10/dist-packages/__pycache__/typing_extensions.cpython-310.pyc\n",
-            "      Removing file or directory /usr/local/lib/python3.10/dist-packages/typing_extensions-4.10.0.dist-info/\n",
+            "      Removing file or directory /usr/local/lib/python3.10/dist-packages/typing_extensions-4.11.0.dist-info/\n",
             "      Removing file or directory /usr/local/lib/python3.10/dist-packages/typing_extensions.py\n",
-            "      Successfully uninstalled typing_extensions-4.10.0\n",
+            "      Successfully uninstalled typing_extensions-4.11.0\n",
             "  Attempting uninstall: numpy\n",
-            "    Found existing installation: numpy 1.25.2\n",
-            "    Uninstalling numpy-1.25.2:\n",
+            "    Found existing installation: numpy 1.26.4\n",
+            "    Uninstalling numpy-1.26.4:\n",
             "      Removing file or directory /usr/local/bin/f2py\n",
-            "      Removing file or directory /usr/local/bin/f2py3\n",
-            "      Removing file or directory /usr/local/bin/f2py3.10\n",
-            "      Removing file or directory /usr/local/lib/python3.10/dist-packages/numpy-1.25.2.dist-info/\n",
+            "      Removing file or directory /usr/local/lib/python3.10/dist-packages/numpy-1.26.4.dist-info/\n",
             "      Removing file or directory /usr/local/lib/python3.10/dist-packages/numpy.libs/\n",
             "      Removing file or directory /usr/local/lib/python3.10/dist-packages/numpy/\n",
-            "      Successfully uninstalled numpy-1.25.2\n",
+            "      Successfully uninstalled numpy-1.26.4\n",
             "  changing mode of /usr/local/bin/f2py to 755\n",
             "  Attempting uninstall: MarkupSafe\n",
             "    Found existing installation: MarkupSafe 2.1.5\n",
