Created using Jupyter Lab

--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -849,21 +849,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Simon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated on Burnaby Mountain, which is about 20 minutes from downtown Vancouver by car or transit. Here are the exact coordinates for Simon Fraser University:\n",
-      "Latitude: 49.2583° N\n",
-      "Longitude: -123.0678° W\n",
-      "If you're using a GPS device or mapping app to find SFU, enter these coordinates or use the following address:\n",
-      "Simon Fraser University\n",
-      "Burnaby, BC V5A 1S6 Canada\n",
-      "Keep in mind that there are other locations within Simon Fraser University, such as satellite campuses and research centers. If you're looking for a specific location on campus, be sure to check the SFU website or contact the university directly for more information."
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Llama.generate: prefix-match hit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Where is the campus of Simon Fraser University located?\n",
+      "Simon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, which is a city located in the Lower Mainland region of Greater Vancouver. Specifically, the campus is located at 8888 University Drive, Burnaby, BC V5A 1S6.\n",
+      "The Simon Fraser University campus spans over 30 acres and features several buildings, including academic facilities, residence halls, recreation centers, and student services. The university also has satellite campuses in Surrey and Vancouver, as well as a research station located on the coast of Burrard Inlet in North Vancouver.\n",
+      "Overall, Simon Fraser University is easily accessible by car or public transportation, with convenient connections to downtown Vancouver and other nearby cities."
      ]
     },
     {
@@ -871,20 +881,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "llama_print_timings:        load time =     827.62 ms\n",
-      "llama_print_timings:      sample time =      35.38 ms /   201 runs   (    0.18 ms per token,  5681.98 tokens per second)\n",
-      "llama_print_timings: prompt eval time =     979.19 ms /    10 tokens (   97.92 ms per token,    10.21 tokens per second)\n",
-      "llama_print_timings:        eval time =   18850.63 ms /   200 runs   (   94.25 ms per token,    10.61 tokens per second)\n",
-      "llama_print_timings:       total time =   20577.01 ms /   210 tokens\n"
+      "llama_print_timings:        load time =     551.45 ms\n",
+      "llama_print_timings:      sample time =      26.64 ms /   198 runs   (    0.13 ms per token,  7431.32 tokens per second)\n",
+      "llama_print_timings: prompt eval time =       0.00 ms /     1 tokens (    0.00 ms per token,      inf tokens per second)\n",
+      "llama_print_timings:        eval time =   17995.64 ms /   198 runs   (   90.89 ms per token,    11.00 tokens per second)\n",
+      "llama_print_timings:       total time =   18630.90 ms /   199 tokens\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"\\nSimon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated on Burnaby Mountain, which is about 20 minutes from downtown Vancouver by car or transit. Here are the exact coordinates for Simon Fraser University:\\nLatitude: 49.2583° N\\nLongitude: -123.0678° W\\nIf you're using a GPS device or mapping app to find SFU, enter these coordinates or use the following address:\\nSimon Fraser University\\nBurnaby, BC V5A 1S6 Canada\\nKeep in mind that there are other locations within Simon Fraser University, such as satellite campuses and research centers. If you're looking for a specific location on campus, be sure to check the SFU website or contact the university directly for more information.\""
+       "'\\nWhere is the campus of Simon Fraser University located?\\nSimon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, which is a city located in the Lower Mainland region of Greater Vancouver. Specifically, the campus is located at 8888 University Drive, Burnaby, BC V5A 1S6.\\nThe Simon Fraser University campus spans over 30 acres and features several buildings, including academic facilities, residence halls, recreation centers, and student services. The university also has satellite campuses in Surrey and Vancouver, as well as a research station located on the coast of Burrard Inlet in North Vancouver.\\nOverall, Simon Fraser University is easily accessible by car or public transportation, with convenient connections to downtown Vancouver and other nearby cities.'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,9 +907,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Awesome! We got Llama-2 working within a LangChain pipeline, which means we are now equipped to up the game by inserting a vector database and a retriever, and a simple UI into the pipeline, to build a RAG-based chatbot as we have conceived. \n",
+    "Awesome! We got Llama-2 working within a LangChain pipeline, which means we are now equipped to up the game by inserting a vector database, a retriever, and a simple UI into the pipeline, to build a RAG-based chatbot as we have conceived. The response, honestly, looks good, at the level of ChatGPT, which is quite amazing given the model is quantized and being run locally.\n",
     "\n",
-    "A bit odd behavior we noted happens when you repeat the same question to the model - sometimes it can diverge and, instead of providing a sensible answer like above, start coming up with additional irrelevant questions to itself, polluting the response. This does not happen with the raw prompting, so this may be due to LangChain doing something behind the scenes. Also, this issue does not seem to happen is the model is re-imported in Cell 68. We will keep an eye on it during the next steps."
+    "A bit odd behavior we noted happens when you repeat the same question to the model - sometimes it can diverge and, instead of providing a sensible answer like above, start coming up with additional irrelevant questions to itself, polluting the response. This does not happen with the raw prompting, so this may be due to LangChain doing something behind the scenes. Also, this issue does not seem to happen if the model is re-imported in Cell 68. We will keep an eye on it during the next steps.\n",
+    "\n",
+    "Lastly, we have noticed the initial parameters of the LlamaCpp constructor (see Cell 68) carry quite an influence on the quality of responses ([link to the full list of the params at LangChain documentation](https://api.python.langchain.com/en/latest/llms/langchain_community.llms.llamacpp.LlamaCpp.html)). The ones we are using right now seem to be optimal, but we will keep an eye on them as well as a way to control how well Llama-2's behavior matches our expectations."
    ]
   }
  ],
