Created using Jupyter Lab

--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -715,7 +715,7 @@
    "outputs": [],
    "source": [
     "# Callbacks support token-wise streaming\n",
-    "callback_manager = CallbackManager([StreamingStdOutCallbackHandler()])# Make sure the model path is correct for your system!"
+    "callback_manager = CallbackManager([StreamingStdOutCallbackHandler()])"
    ]
   },
   {
@@ -819,7 +819,9 @@
    ],
    "source": [
     "llm = LlamaCpp(\n",
+    "    # Make sure the model path is correct for your system!\n",
     "    model_path=\"/Users/Narratic-DEV002/.cache/huggingface/hub/models--TheBloke--Llama-2-7B-chat-GGUF/snapshots/191239b3e26b2882fb562ffccdd1cf0f65402adb/llama-2-7b-chat.Q4_K_M.gguf\",\n",
+    "    \n",
     "    temperature=0.4,\n",
     "    max_tokens=1024,\n",
     "    repeat_penalty=1.2,\n",
