Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -17,7 +17,7 @@
     "# Workflow\n",
     "\n",
     "1. Setting Up LLama-2 and LangChain\n",
-    "2. "
+    "2. Text Embeddings and the Vector Store"
    ]
   },
   {
@@ -340,19 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 129,
    "id": "ba94a230-16ea-4c92-9ed3-12accb9890de",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Llama.generate: prefix-match hit\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Simon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, which is a city located in the Greater Vancouver area. Specifically, the university's address is:\n",
-      "5176 University Way\n",
-      "Burnaby, BC V5A 1S6\n",
-      "Canada"
+      "Simon Fraser University (SFU) is a public research university located in Burnaby, British Columbia, Canada. The main campus of SFU is situated on the traditional lands of the Coast Salish peoples, specifically the territories of the Squamish and Tsleil-Waututh First Nations.\n",
+      "Address: Simon Fraser University, 8888 University Drive, Burnaby, BC V5A 1S6, Canada\n",
+      "The university has a second campus in Surrey, which is located approximately 30 minutes southeast of the main campus by car. This campus houses the Faculty of Health Sciences and other programs.\n",
+      "Address: Simon Fraser University – Surrey Campus, 2455 Old Clayburn Road, Surrey, BC V3S 7V9, Canada"
      ]
     },
     {
@@ -361,25 +368,53 @@
      "text": [
       "\n",
       "llama_print_timings:        load time =     867.06 ms\n",
-      "llama_print_timings:      sample time =      13.82 ms /    81 runs   (    0.17 ms per token,  5860.65 tokens per second)\n",
-      "llama_print_timings: prompt eval time =    1014.74 ms /    10 tokens (  101.47 ms per token,     9.85 tokens per second)\n",
-      "llama_print_timings:        eval time =    7541.07 ms /    80 runs   (   94.26 ms per token,    10.61 tokens per second)\n",
-      "llama_print_timings:       total time =    8872.96 ms /    90 tokens\n"
+      "llama_print_timings:      sample time =      32.50 ms /   177 runs   (    0.18 ms per token,  5445.65 tokens per second)\n",
+      "llama_print_timings: prompt eval time =       0.00 ms /     1 tokens (    0.00 ms per token,      inf tokens per second)\n",
+      "llama_print_timings:        eval time =   17285.27 ms /   177 runs   (   97.66 ms per token,    10.24 tokens per second)\n",
+      "llama_print_timings:       total time =   18022.78 ms /   178 tokens\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"\\nSimon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, which is a city located in the Greater Vancouver area. Specifically, the university's address is:\\n5176 University Way\\nBurnaby, BC V5A 1S6\\nCanada\""
+       "'\\nSimon Fraser University (SFU) is a public research university located in Burnaby, British Columbia, Canada. The main campus of SFU is situated on the traditional lands of the Coast Salish peoples, specifically the territories of the Squamish and Tsleil-Waututh First Nations.\\nAddress: Simon Fraser University, 8888 University Drive, Burnaby, BC V5A 1S6, Canada\\nThe university has a second campus in Surrey, which is located approximately 30 minutes southeast of the main campus by car. This campus houses the Faculty of Health Sciences and other programs.\\nAddress: Simon Fraser University – Surrey Campus, 2455 Old Clayburn Road, Surrey, BC V3S 7V9, Canada'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "llm.invoke(question)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afb91bf9-114e-4372-b3b1-c8afaabde07c",
+   "metadata": {},
+   "source": [
+    "# Text Embeddings and the Vector Store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "638cebe7-10b4-4e57-bd5d-8a9bf64380b5",
+   "metadata": {},
+   "source": [
+    "As our RAG bot is going to rely on the supply of extra knowledge that we will manually package into the project (in the form of Q&A data), here comes a crucial part - choosing a text embedding model and the vector store. The former will take care of converting our textual Q&A data into vector representation which is required to do the semantic similarity comparison later - in other words, to match to the best of our ability the user question to the appropriate piece of information within the extra knowledge. The latter is going to neatly store these representations, providing access to them as needed. These two nodes are cornerstones of any RAG project and the use cases and the range of choices for the models and the vector stores are well documented."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c849a2d-bc69-4593-800e-5ddbc0dcfbae",
+   "metadata": {},
+   "source": [
+    "### Choosing the Text Embedding Model\n",
+    "\n",
+    "For a long time there was a little choice for a specific model that produces the embeddings beside OpenAI's `ada-002`, which is provided through API requiring a small fee to use. However, by April 2024 (the time of writing this notebook) the range has considerably increased, and now there are not only players in the market (e.g. [Cohere](https://cohere.com/embeddings), [Jina](https://jina.ai/embeddings/) - both offer a free tier) but also open-source text embeddings model can be found, such as `Sentence Transformers` available at Hugging Face ([link](https://huggingface.co/sentence-transformers)). \n",
+    "\n",
+    "As students we are delighted to be able to use another model free of charge; our only question is whether it performs comparably to ada-002. The good news is that our brief research has told us we should be fine with the open-source Sentence Transformers (which come as a [family of models](https://www.sbert.net/docs/pretrained_models.html]) each trading off perfomance for quality in various ways) - here are the resources we are referring to: [(1)](https://iamnotarobot.substack.com/p/should-you-use-openais-embeddings), [(2)](https://www.reddit.com/r/MachineLearning/comments/11okrni/discussion_compare_openai_and_sentencetransformer/), [(3)](https://supabase.com/blog/fewer-dimensions-are-better-pgvector)."
    ]
   }
  ],
