--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -822,10 +822,10 @@
     "    # Make sure the model path is correct for your system!\n",
     "    model_path=\"/Users/Narratic-DEV002/.cache/huggingface/hub/models--TheBloke--Llama-2-7B-chat-GGUF/snapshots/191239b3e26b2882fb562ffccdd1cf0f65402adb/llama-2-7b-chat.Q4_K_M.gguf\",\n",
     "    \n",
-    "    temperature=0.4,\n",
+    "    temperature=0.6,\n",
     "    max_tokens=1024,\n",
-    "    repeat_penalty=1.2,\n",
-    "    #top_p=1,\n",
+    "    repeat_penalty=1.04,\n",
+    "    top_p=0.8,\n",
     "    top_k=150,\n",
     "    callback_manager=callback_manager,\n",
     "    verbose=True,  # Verbose is required to pass to the callback manager\n",
@@ -851,31 +851,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Llama.generate: prefix-match hit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Where is the campus of Simon Fraser University located?\n",
-      "Simon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, which is a city located in the Lower Mainland region of Greater Vancouver. Specifically, the campus is located at 8888 University Drive, Burnaby, BC V5A 1S6.\n",
-      "The Simon Fraser University campus spans over 30 acres and features several buildings, including academic facilities, residence halls, recreation centers, and student services. The university also has satellite campuses in Surrey and Vancouver, as well as a research station located on the coast of Burrard Inlet in North Vancouver.\n",
-      "Overall, Simon Fraser University is easily accessible by car or public transportation, with convenient connections to downtown Vancouver and other nearby cities."
+      "\n",
+      "The Simon Fraser University (SFU) is located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, a city located in the Greater Vancouver area, about 20 kilometers (12 miles) southeast of Vancouver. The university has additional campuses in Surrey and Vancouver, as well as satellite centers in various locations throughout British Columbia."
      ]
     },
     {
@@ -883,20 +867,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "llama_print_timings:        load time =     551.45 ms\n",
-      "llama_print_timings:      sample time =      26.64 ms /   198 runs   (    0.13 ms per token,  7431.32 tokens per second)\n",
-      "llama_print_timings: prompt eval time =       0.00 ms /     1 tokens (    0.00 ms per token,      inf tokens per second)\n",
-      "llama_print_timings:        eval time =   17995.64 ms /   198 runs   (   90.89 ms per token,    11.00 tokens per second)\n",
-      "llama_print_timings:       total time =   18630.90 ms /   199 tokens\n"
+      "llama_print_timings:        load time =     774.16 ms\n",
+      "llama_print_timings:      sample time =      18.38 ms /    86 runs   (    0.21 ms per token,  4678.74 tokens per second)\n",
+      "llama_print_timings: prompt eval time =     917.40 ms /    10 tokens (   91.74 ms per token,    10.90 tokens per second)\n",
+      "llama_print_timings:        eval time =    8447.25 ms /    85 runs   (   99.38 ms per token,    10.06 tokens per second)\n",
+      "llama_print_timings:       total time =    9750.17 ms /    95 tokens\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'\\nWhere is the campus of Simon Fraser University located?\\nSimon Fraser University (SFU) is a public research university located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, which is a city located in the Lower Mainland region of Greater Vancouver. Specifically, the campus is located at 8888 University Drive, Burnaby, BC V5A 1S6.\\nThe Simon Fraser University campus spans over 30 acres and features several buildings, including academic facilities, residence halls, recreation centers, and student services. The university also has satellite campuses in Surrey and Vancouver, as well as a research station located on the coast of Burrard Inlet in North Vancouver.\\nOverall, Simon Fraser University is easily accessible by car or public transportation, with convenient connections to downtown Vancouver and other nearby cities.'"
+       "'\\nThe Simon Fraser University (SFU) is located in British Columbia, Canada. The main campus of SFU is situated in Burnaby, a city located in the Greater Vancouver area, about 20 kilometers (12 miles) southeast of Vancouver. The university has additional campuses in Surrey and Vancouver, as well as satellite centers in various locations throughout British Columbia.'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,9 +895,9 @@
    "source": [
     "Awesome! We got Llama-2 working within a LangChain pipeline, which means we are now equipped to up the game by inserting a vector database, a retriever, and a simple UI into the pipeline, to build a RAG-based chatbot as we have conceived. The response, honestly, looks good, at the level of ChatGPT, which is quite amazing given the model is quantized and being run locally.\n",
     "\n",
-    "A bit odd behavior we noted happens when you repeat the same question to the model - sometimes it can diverge and, instead of providing a sensible answer like above, start coming up with additional irrelevant questions to itself, polluting the response. This does not happen with the raw prompting, so this may be due to LangChain doing something behind the scenes. Also, this issue does not seem to happen if the model is re-imported in Cell 68. We will keep an eye on it during the next steps.\n",
+    "A bit odd behavior we noted happens when you repeat the same question to the model - sometimes it can diverge and, instead of providing a sensible answer like above, start coming up with additional irrelevant questions to itself, polluting the response. This does not happen with the raw prompting, so this may be due to the LangChain setup involving something additional behind the scenes. Also, this issue does not seem to happen if the model is re-imported (although, we cannot establish it with certainty at this point). We will keep an eye on it during the next steps.\n",
     "\n",
-    "Lastly, we have noticed the initial parameters of the LlamaCpp constructor (see Cell 68) carry quite an influence on the quality of responses ([link to the full list of the params at LangChain documentation](https://api.python.langchain.com/en/latest/llms/langchain_community.llms.llamacpp.LlamaCpp.html)). The ones we are using right now seem to be optimal, but we will keep an eye on them as well as a way to control how well Llama-2's behavior matches our expectations."
+    "Lastly, we have noticed the initial parameters of the LlamaCpp constructor (see the corresponding cell) carry quite an influence on the quality of responses ([link to the full list of the params at LangChain documentation](https://api.python.langchain.com/en/latest/llms/langchain_community.llms.llamacpp.LlamaCpp.html)). The ones we are using right now seem to be optimal, but we will keep an eye on them as well as a way to control how well Llama-2's behavior matches our expectations."
    ]
   }
  ],
