Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "1. Setting Up LLama-2 and LangChain\n",
     "2. Text Embeddings and the Vector Store\n",
-    "3. Creating a RAG pipeline using sample data"
+    "3. Preparing a RAG Pipeline Using Sample Data\n",
+    "4. Completing the RAG Pipeline Using Real Data"
    ]
   },
   {
@@ -34,7 +35,7 @@
    "id": "22f27209-1ade-4bd0-a320-9914a16ed75f",
    "metadata": {},
    "source": [
-    "The next section merely repeats the code from the preparation notebook. If that notebook has been run already, running this section may not be required as the kernel should keep its state. Otherwise, the same code can be run for convenience.\n",
+    "The next section mostly repeats the code from the preparation notebook. If that notebook has been run already, running this section may not be required as the kernel should keep its state. However, this section may diverge from the previous notebook, so it is recommended to re-run all of the cells here.\n",
     "\n",
     "### Prerequisites"
    ]
@@ -161,6 +162,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cac3ffa2-73a3-49bb-b1a3-cccbec6830db",
+   "metadata": {},
+   "source": [
+    "Here we write the system prompt inside a basic template used to initialize the chatbot. During our experements we have noticed it exerts a lot of influence on the bot's behavior, being no less important than the Llama-2 parameters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "id": "70ab37b1-58ea-4a6f-a112-b07ebbe0fd07",
@@ -190,6 +199,14 @@
     "    input_variables=[\"question\"],\n",
     "    template=prompt_template,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04ea5859-c6e4-4db9-9941-1d295e2d3983",
+   "metadata": {},
+   "source": [
+    "The model then can be easily initialized thanks to LangChain's built-in `llama.cpp` wrapper ([documentation](https://python.langchain.com/docs/integrations/llms/llamacpp/))."
    ]
   },
   {
@@ -1964,7 +1981,15 @@
    "id": "4fbd227a-5409-4b89-91da-ba5c987d6fc7",
    "metadata": {},
    "source": [
-    "# Creating a RAG pipeline using sample data"
+    "# Preparing a RAG Pipeline Using Sample Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fce2ebb4-f0de-4a10-9ba1-2e59dd98999e",
+   "metadata": {},
+   "source": [
+    "Following the spirit of moving steadily but in small steps, we first set up a RAG pipeline with a sample text consisting of our class syllabus from the Canvas :)"
    ]
   },
   {
@@ -2000,8 +2025,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3229c44e-d296-4ac4-9aa0-6b831c6ca91a",
+   "metadata": {},
+   "source": [
+    "Connecting ChromaDB is a trivial, [well-documented](https://python.langchain.com/docs/integrations/vectorstores/chroma/) task. We pick an appropriate file loader from LangChain's toolkit and split our text file into chunks. Splitting is an important step when working with external knowledge data since if we don't do it, we risk not fitting our augmented prompt into Llama-2's context window (4096 tokens max)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 153,
    "id": "8c963f5e-565b-45bc-96dc-fa9ae6178bb7",
    "metadata": {},
    "outputs": [
@@ -2009,7 +2042,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created a chunk of size 1394, which is longer than the specified 1000\n"
+      "Created a chunk of size 1394, which is longer than the specified 1024\n"
      ]
     },
     {
@@ -2035,12 +2068,15 @@
     }
    ],
    "source": [
+    "# Code based on examples from the LangChain documentation: \n",
+    "# https://python.langchain.com/docs/integrations/vectorstores/chroma/\n",
+    "\n",
     "# load the sample document \n",
     "loader = TextLoader(\"samples/481_syllabus.txt\")\n",
     "documents = loader.load()\n",
     "\n",
     "# split it into chunks\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
+    "text_splitter = CharacterTextSplitter(chunk_size=1024, chunk_overlap=64)\n",
     "docs = text_splitter.split_documents(documents)\n",
     "\n",
     "# load it into Chroma\n",
@@ -2053,6 +2089,77 @@
     "# print results\n",
     "print(docs[0].page_content)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fd9329a-b05b-4ae5-a579-996f8516f604",
+   "metadata": {},
+   "source": [
+    "Very nice! Querying the vector store indeed gave us a relevant chunk. Let's do some other query, though, to confirm this result is not random:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "981e9cff-c9d5-4d4c-8e9a-ffab6fc4d763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Consider e-mail etiquette,  http://www.albion.com/netiquette/corerules.html when sending an email to us. \n",
+      "To promote understanding with your reader:\n",
+      "\n",
+      "    Write a clear subject line that shows your section number and the purpose of the email. Include course number in email subject: \"IAT 418/885: .... \". Thanks!\n",
+      "\n",
+      "    Identify your audience by name (i.e Hi Nilay or Hello Maryiam)\n",
+      "\n",
+      "    Compose a direct, concise message with a clear purpose (i.e I have a question about todayâ€™s activity or I will not be in class next week.)\n",
+      "\n",
+      "    Proofread and use appropriate language for the context of your message--friendly and professional. \n",
+      "\n",
+      "    Close with your name and student number (i.e Regards, Brenda Sans (301001010))\n",
+      "\n",
+      "Email Protocols\n",
+      "\n",
+      "    Your Instructor and TA will reply to e-mails within 24 hours during weekdays.\n",
+      "\n",
+      "    We do not answer emails after 5pm, or on weekends and holidays.\n",
+      "\n",
+      "    Requests for grade changes and extensions must be sent directly to the course Instructor.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"What is the e-mail policy in IAT 481?\"\n",
+    "docs = db.similarity_search(query)\n",
+    "print(docs[0].page_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5836c4aa-7b30-497f-9b19-82d52cc27192",
+   "metadata": {},
+   "source": [
+    "Looks good. The chunk returned to us matches our query. We can now plug this into Llama-2, replace the sample data with our Q&A pairs, and, hopefully, end up with a working RAG-powered application."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3d2875d-fbad-4436-af2b-c25742135a1c",
+   "metadata": {},
+   "source": [
+    "# Completing the RAG Pipeline Using Real Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1054d2e9-3b1e-411b-89d6-3197e28f3173",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
