Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -2154,12 +2154,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1054d2e9-3b1e-411b-89d6-3197e28f3173",
+   "cell_type": "markdown",
+   "id": "663ac598-dfd1-4a0c-bea4-0846af2dff4a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To recap, our project goal is get our chatbot to provide advice on better sleep. For a moment, we were not sure what data format to use for this purpose. However, some production-ready datasets such as [MedQuad-MedicalQnADataset by keivalya](https://huggingface.co/datasets/keivalya/MedQuad-MedicalQnADataset) are comprised of **simple Q&A pairs** listed in a normal **CSV file**. We chose the same route (thankfully, LangChain packages a file loader for that - [here is an example of its use](https://betterprogramming.pub/build-a-chatbot-on-your-csv-data-with-langchain-and-openai-ed121f85f0cd))"
+   ]
   }
  ],
  "metadata": {
